@@ -2,7 +2,7 @@ Package: RQDA
 Type: Package
 Title: R-based Qualitative Data Analysis
 Version: 0.1-7
-Date: 2009-03-21
+Date: 2009-05-01
 Author: HUANG Ronggui
 Maintainer: HUANG Ronggui <ronggui.huang@gmail.com>
 Depends: R (>= 2.5.0), DBI, RSQLite, gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36)
