@@ -13,7 +13,7 @@
 Package: \tab RQDA\cr
 Type: \tab Package\cr
 Version: \tab 0.1-7\cr
-Date: \tab 2009-04-26\cr
+Date: \tab 2009-05-01\cr
 Depends: \tab DBI, RSQLite, RGtk2, gWidgets, gWidgetsRGtk2\cr
 License: \tab New style BSD License\cr
 LazyLoad: \tab yes\cr
